# an-average-rpg

./: .firebaserc  .gitignore  AGENTS.md  Cargo.toml  README.md  an_average_rpg_event_mission_bible.md  firebase.json  firestore.indexes.json  firestore.rules  package.json  pnpm-lock.yaml  storage.rules
.cursor/rules/: adventure-campaigns.mdc  bump-app-version.mdc  deploy-on-push.mdc  game-core-concepts.mdc  git-ship-on-change.mdc  project-structure.mdc  protect-secrets.mdc
.github/workflows/: firebase-deploy.yml  web-pages.yml
apps/web/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
crates/game-core/: Cargo.toml
crates/game-core/src/: combat.rs  dungeons.rs  effects.rs  inheritance.rs  jobs.rs  lib.rs  rng.rs  skills.rs  types.rs
crates/game-wasm/: Cargo.toml
crates/game-wasm/src/: bindings.rs  lib.rs
docs/: game-purpose-and-core-loop.md
functions/: package.json  tsconfig.json
functions/src/: index.ts
functions/src/actions/: advanceMission.ts  allocateStatPoints.ts  bankOperations.ts  claimSkill.ts  createHeir.ts  createLineage.ts  dailyTick.ts  equipItem.ts  killHeir.ts  (+8 more)
game-data/: bloodline-skills.json  classes.json  combat.json  dungeons.json  effects.json  events.json  items.json  jobs.json  mission-interludes.json  missions.json  races.json  skills.json  subclass-skills.json  subclasses.json
scripts/: download-item-icons.mjs  enrich-skill-tree-data.mjs  generate-field-events.mjs  generate-mission-interludes.mjs  generate-missions.mjs  import-mission-bible.mjs  prepare-functions-deploy.mjs  validate-game-data.mjs
(+108 files in other folders)
