[workspace]
resolver = "2"
members = [
    "crates/game-core",
    "crates/game-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["An Average RPG Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
