[package]
name = "game-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core game simulation library for An Average RPG"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"

[lib]
crate-type = ["lib", "cdylib"]
