[package]
name = "game-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM bindings for An Average RPG game-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
game-core = { path = "../game-core" }
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
